# News-Intelligence-Dashboard

./: .gitignore  README.md  pyproject.toml
config/: automation.yaml  eodhd.local.example.yaml  eodhd.yaml  event-rules.yaml  favourites.yaml  file-drop.yaml  freshness-half-lives.yaml  instrument-relationships.yaml  official-sources.yaml  retention.yaml  sec-edgar.yaml  source-credibility.yaml  world-news.yaml
docs/: architecture.md  design_system.md  file-drop-integration.md  historical-calibration.md  manual-frontend-checklist.md  sec-edgar-ingestion.md  source-adapters.md
docs/mockups/: asterius_news_intelligence_shell.html
examples/: nvda_earnings.json
frontend/: index.html
frontend/css/: app.css
frontend/js/: api.js  app.js  fixtures.js  renderers.js
src/news_intelligence/: __init__.py  cli.py  config.py  http_client.py  intelligence.py  main.py  pipeline.py  progress.py  universe.py  utils.py
src/news_intelligence/api/: routes.py
src/news_intelligence/calibration/: __init__.py  outcomes.py  service.py
src/news_intelligence/classification/: __init__.py  rules.py
src/news_intelligence/clustering/: __init__.py  clusterer.py
tests/: conftest.py
tests/fixtures/: scenarios.json
tests/integration/: test_material_update_api.py  test_sec_edgar_live.py
tests/unit/: test_calibration_outcomes.py  test_config_secrets.py  test_http_client.py  test_intelligence_refresh.py  test_market_data.py  test_pipeline_scenarios.py  test_schema_export.py  test_sec_edgar_source.py  test_source_automation.py  test_universe_scoring_outputs.py
(+35 files in other folders)
