[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-intelligence"
version = "0.1.0"
description = "Deterministic financial news intelligence module for tactical trading research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "PyYAML>=6.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
news-intelligence = "news_intelligence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/news_intelligence"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["frontend"]
